@@ -1,3 +1,7 @@
+29 January 2018: Ralph
+	- Use NSEC with longest ce to prove wildcard absence.
+	- Only use *.ce to prove wildcard absence, no longer names.
+
 25 January 2018: Wouter
 	- ltrace.conf file for libunbound in contrib.
 
